# shikibo

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.agents/: AGENTS.md
planning_and_spec/: glossary.md  implementation_note.md  prime_directive.md  runbook.md  user_intent.md
shikibo/: __main__.py  config.py
shikibo/client/: client.py
shikibo/coordinator/: service.py
shikibo/webapp/: app.py
shikibo/webapp/static/: app.js  index.html  style.css
src/: config.py  storage.py
src/client/: client.py
src/coordinator/: service.py
src/webapp/: app.py
src/webapp/static/: app.js  index.html  style.css
tests/: test_flow.py
user_resources/: design_and_coding_principle.md  development_governance.md  documentation_principle.md  role_and_responsibility.md
